Refactor: Add Name and Asset Type
