# backend/docs/swagger.json
@@ -630,6 +630,9 @@
                     "type": "integer",
                     "example": 1000000
                 },
+                "asset_type": {
+                    "type": "string"
+                },
                 "code": {
                     "type": "string",
                     "example": "USDC"
@@ -643,6 +646,10 @@
                 },
                 "issuer": {
                     "$ref": "#/definitions/entity.Wallet"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "USD Coin"
                 }
             }
         },
@@ -827,13 +834,19 @@
         "v1.CreateAssetRequest": {
             "type": "object",
             "required": [
+                "asset_type",
                 "code",
+                "name",
                 "sponsor_id"
             ],
             "properties": {
                 "amount": {
                     "type": "string",
                     "example": "1000"
+                },
+                "asset_type": {
+                    "type": "string",
+                    "example": "security_token"
                 },
                 "code": {
                     "type": "string",
@@ -842,6 +855,10 @@
                 "limit": {
                     "type": "integer",
                     "example": 1000
+                },
+                "name": {
+                    "type": "string",
+                    "example": "USDC"
                 },
                 "set_flags": {
                     "type": "array",
